--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -54,8 +54,15 @@ const image = meta.image || '/i/sergiocarracedo-og.png';
 <!-- Font preloads -->
 <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/NotoSans-Regular.ttf" as="font" type="font/ttf" crossorigin />
-<link rel="preload" href="/fonts/NotoSans-Bold.ttf" as="font" type="font/ttf" crossorigin />
+<link rel="preload" href="/fonts/NotoSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
+<link rel="preload" href="/fonts/NotoSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
+<link
+  rel="preload"
+  as="image"
+  href="/i/sergiocarracedo-alt.webp"
+  imagesrcset="/i/sergiocarracedo-alt.webp"
+  fetchpriority="high"
+/>
 
 <!-- Canonical URL -->
 <link rel="canonical" href={meta.canonical || Astro.url} />
