--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,7 +3,15 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/fonts/NotoSans-Regular.ttf) format('truetype');
+  src: url(/fonts/NotoSans-Regular.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'NotoSans';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: url(/fonts/NotoSans-Medium.woff2) format('woff2');
 }
 
 @font-face {
@@ -11,17 +19,18 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/fonts/NotoSans-Bold.ttf) format('truetype');
+  src: url(/fonts/NotoSans-Bold.woff2) format('woff2');
 }
-
 
 @font-face {
   font-family: 'Atkinson';
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url(/fonts/atkinson-regular.woff) format('woff2');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  src: url(/fonts/atkinson-regular.woff) format('woff');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
+    U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -29,6 +38,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 700;
-  src: url(/fonts/atkinson-bold.woff) format('woff2');
-  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  src: url(/fonts/atkinson-bold.woff) format('woff');
+  unicode-range:
+    U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
+    U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
