--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,9 @@ const today = new Date();
       <div class="mt-2 text-sm">
         &copy; {today.getFullYear()} Sergio Carracedo. All rights reserved.
       </div>
+      <div class="mt-2 text-sm">
+        <a class="text-primary link" href="/blog/stats">Blog stats</a>
+      </div>
     </div>
     <SocialLinks />
   </div>
