--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import NewsletterToast from '../components/NewsletterToast.astro';
 
 import { DISQUS, GA } from '../consts';
 
@@ -19,6 +20,7 @@ const { meta } = Astro.props;
       <slot />
     </main>
     <Footer />
+    <NewsletterToast />
 
     <script
       async
