fix: add prerender directive to paginated routes
- Add 'export const prerender = true' to blog pagination route
- Add 'export const prerender = true' to tags pagination route
- Fixes 'Cannot destructure property data of page as it is undefined'
- Required when using output: 'server' with static pagination

--- a/src/pages/tags/[tag]/[page].astro
+++ b/src/pages/tags/[tag]/[page].astro
@@ -28,6 +28,8 @@ export interface StaticPath {
 
 const tags = (await getTags()) || new Map();
 
+export const prerender = true;
+
 export const getStaticPaths = async ({
   paginate,
 }: {
